charts/all/hello-world-sgx/templates/hello-world-sgx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: hello-world-sgx
  name: hello-world-sgx
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      deploymentconfig: hello-world-sgx
  template:
    metadata:
      labels:
        app: hello-world-sgx
        deploymentconfig: hello-world-sgx
      name: hello-world-sgx
    spec:
      containers:
      - name: apache
        image: seahorse911/httpd:bitnami-2.4.57-debian-11-r145-gramine
        # image: docker.io/bitnami/apache:2.4.57-debian-11-r145
        # image: seahorse911/httpd:2.4.57-bookworm
        # image: docker.io/library/httpd:2.4.57-bookworm
        # image: docker.io/library/nginx:1.25-bookworm
        #image: registry.access.redhat.com/ubi8/httpd-24:1-226
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html
          name: hello-world-sgx-configmap
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 120
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 120
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          seccompProfile:
            type: RuntimeDefault
          runAsUser: 1000965555
          runAsGroup: 2000
          fsGroup: 3000
        resources:
          requests:
            sgx.intel.com/epc: "1Gi"
          limits:
            sgx.intel.com/epc: "1Gi"
      volumes:
      - name: hello-world-sgx-configmap
        configMap:
          defaultMode: 438
          name: hello-world-sgx-configmap
