charts/all/hello-world-sgx/templates/hello-world-sgx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-world-sgx
  name: hello-world-sgx
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello-world-sgx
    weight: 100
  wildcardPolicy: None
